--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
+title: Mike Byrnes
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+  description: Student Of Life located in New Hampshire, USA
+twitter_username: byrnesz
+github_username: byrnesz
 minimal_mistakes_skin: default
 search: true
 
@@ -59,7 +57,7 @@ plugins:
 
 author:
   name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "https://avatars0.githubusercontent.com/u/15132725?v=3&u=e2b45006841ead6057b5958e79828b6f66faa255&s=140"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
     - label: "Website"
